# conduit

./: .bandit_scan.cfg  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
.fabistrano/: supervisor.json
.github/prompts/: howtoUnittest.prompt.md
.github/workflows/: ci.yml
conduit/: __init__.py  conduit.py  main_tools.py
conduit/client/: __init__.py  base.py  differential.py  diffusion.py  file.py  maniphest.py  misc.py  project.py  types.py  unified.py  user.py
conduit/client/tests/: test_client.py  test_differential.py  test_diffusion.py  test_enhanced_client.py  test_enhanced_features.py  test_file.py  test_maniphest.py  test_misc.py  test_project.py  test_type_safety_regressions.py  test_types_validation.py  test_user.py  test_workboard.py
conduit/tests/: test_mcp_tools.py  test_security_sse_mode.py
conduit/tools/: __init__.py  differential_tools.py  diffusion_tools.py  handlers.py  optimization.py  pagination.py  registry.py
conduit/tools/tests/: test_optimization.py  test_pagination.py
conduit/utils/: __init__.py  errors.py  validation.py
conduit/utils/tests/: test_responses.py  test_search.py  test_serialization.py  (+1 more)
src/: __init__.py  conduit.py  main_tools.py  tools.py
src/client/: __init__.py  base.py  client.py  differential.py  diffusion.py  file.py  maniphest.py  misc.py  project.py  types.py  unified.py  user.py
src/tests/: test_user_agent_filter.py
src/tools/: __init__.py  differential_tools.py  diffusion_tools.py  handlers.py  optimization.py  registry.py
src/utils/: __init__.py  parameters.py  responses.py  search.py  serialization.py  validation.py
tests/: Dockerfile  init_phabricator  shell.sh  test_conduit.py
(+19 files in other folders)
